--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,15 @@
   }
 }
 @layer utilities{
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .gradient-title{
     @apply font-extrabold bg-gradient-to-br from-green-600 to-green-200 bg-clip-text tracking-tighter text-transparent pb-4 pr-2;
   }
